--- a/support.mdx
+++ b/support.mdx
@@ -6,17 +6,17 @@ description: "Get help with your Fincra integration."
 
 ## Developer support
 
-If you are a developer building with Fincra, the answers to most questions can be found in docs, try using the search feature for easy navigation and help. For general questions about building with Fincra APIs, join the [Fincra Hub Slack Community](https://fincrahub.slack.com/join/shared_invite/zt-2qj5a4zkl-JJwlW2L~YpPNFtPBSxdM4g#/shared-invite/email) to ask questions and get help from the team and other developers.
+If you're building with Fincra, most answers are in the docs. Use the search feature for quick navigation. For general questions, join the [Fincra Hub Slack Community](https://fincrahub.slack.com/join/shared_invite/zt-2qj5a4zkl-JJwlW2L~YpPNFtPBSxdM4g#/shared-invite/email) to connect with the team and other developers.
 
-## Technical Support
+## Technical support
 
-For integration issues not covered in the docs, reach out to our developer support team at [developers@fincra.com](LINK).
+For integration issues not covered in the docs, reach out to our developer support team at [developers@fincra.com](mailto:developers@fincra.com).
 
-## System Status
+## System status
 
 Check real-time platform status and subscribe to incident updates at [status.fincra.com](https://status.fincra.com/).
 
 ## Sales and Partnerships
 
 If you have questions about Fincra products, pricing, or how
-Fincra can help scale your business, [contact Sales](sales@fincra.com).
+Fincra can help scale your business, [contact Sales](mailto:sales@fincra.com).
