update home page

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -15,7 +15,7 @@ from the ground up.
 
 - New docs platform with improved navigation and search
 - Restructured around products: Payments, Payouts,
-  Transactional FX, Direct Debit, and Verification
+  Currency Conversion, Direct Debit, and Verification
 - Clear getting started guides for each product
 - Comprehensive webhook documentation
 - Server-side and mobile SDK references
@@ -25,7 +25,7 @@ from the ground up.
 
 - "Pay-Ins/Collections" → Payments
 - "Payouts (Withdrawal)" → Payouts
-- "Conversions" → Transactional FX
+- "Conversions" → Currency Conversion
 - "Identity Management" → Verification
 - "Checkout Redirect" → Hosted Payment Page
 - "Checkout Standard" → Drop-in Checkout
