--- a/index.mdx
+++ b/index.mdx
@@ -1,70 +1,99 @@
 ---
-title: "Fincra Product Docs"
-sidebarTitle: "Home"
-description: "Explore our products and guides to integrate with Fincra."
+title: "Fincra Product Documentation"
+sidebarTitle: "Overview"
+description: "Guides, resources, and API references to help you build with Fincra."
 ---
 
-## Setting up
+Fincra is a payment infrastructure platform for businesses operating in and out of Africa.
+Use our APIs and developer tools to accept payments, send payouts, convert currencies,
+and manage virtual accounts — all from a single integration.
 
-Get your documentation site up and running in minutes.
-
-<Card title="Start here" icon="rocket" href="/quickstart" horizontal>
-  Follow our three step quickstart guide.
-</Card>
-
-## Make it yours
-
-Design a docs site that looks great and empowers your users.
-
-<Columns cols={2}>
-  <Card title="Edit locally" icon="pen-to-square" href="/development">
-    Edit your docs locally and preview them in real time.
-  </Card>
-  <Card title="Customize your site" icon="palette" href="/essentials/settings">
-    Customize the design and colors of your site to match your brand.
-  </Card>
-  <Card title="Set up navigation" icon="map" href="/essentials/navigation">
-    Organize your docs to help users find what they need and succeed with your
-    product.
-  </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
-
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card title="Write with MDX" icon="pen-fancy" href="/essentials/markdown">
-    Use MDX to style your docs pages.
-  </Card>
-  <Card title="Code samples" icon="code" href="/essentials/code">
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card title="Images" icon="image" href="/essentials/images">
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
-
-## Need inspiration?
+## Get started
 
 <Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
+  title="New to Fincra?"
+  icon="rocket"
+  href="/get-started/create-your-account"
 >
-  Browse our showcase of exceptional documentation sites.
+  Create your account, explore the sandbox environment, and complete KYC to go
+  live.
 </Card>
+
+## Explore our products
+
+<CardGroup cols={2}>
+  <Card title="Payments" icon="credit-card" href="/payments/overview">
+    Accept payments from your customers across Africa with cards, bank
+    transfers, mobile money, and more.
+  </Card>
+  <Card title="Payouts" icon="money-bill-transfer" href="/payouts/overview">
+    Send payouts to recipients across Africa and beyond.
+  </Card>
+  <Card
+    title="Currency Conversion"
+    icon="arrows-rotate"
+    href="/currency-conversion/overview"
+  >
+    Get quotes and convert between currencies at competitive rates.
+  </Card>
+  <Card title="Direct Debit" icon="repeat" href="/direct-debit/overview">
+    Set up mandates and collect recurring payments from your customers.
+  </Card>
+  <Card title="Verification" icon="shield-check" href="/verification/overview">
+    Verify bank accounts, BVNs, and card BINs before processing transactions.
+  </Card>
+</CardGroup>
+
+## Developer resources
+
+<CardGroup cols={2}>
+  <Card title="API Reference" icon="code" href="/api-reference">
+    Explore Fincra's REST API endpoints, request and response schemas.
+  </Card>
+  <Card
+    title="Webhooks"
+    icon="webhook"
+    href="/developer-resources/webhooks/overview"
+  >
+    Receive real-time notifications when events happen on your account.
+  </Card>
+  <Card
+    title="SDKs"
+    icon="cube"
+    href="/developer-resources/sdks/server-side-sdks"
+  >
+    Server-side and mobile libraries to speed up your integration.
+  </Card>
+  <Card title="Sandbox" icon="flask" href="/get-started/explore-the-dashboard">
+    Test your integration with sample data before going live.
+  </Card>
+</CardGroup>
+
+## Common use cases
+
+<CardGroup cols={3}>
+  <Card
+    title="Accept payments on your website"
+    icon="cart-shopping"
+    href="/use-cases/accept-payments"
+  >
+    Integrate checkout, payment links, or the Direct Charge API to collect
+    payments from your customers.
+  </Card>
+  <Card
+    title="Send payouts across Africa"
+    icon="paper-plane"
+    href="/use-cases/send-payouts"
+  >
+    Pay suppliers, employees, or partners in local currencies across multiple
+    African countries.
+  </Card>
+  <Card
+    title="Collect via virtual accounts"
+    icon="building-columns"
+    href="/use-cases/collect-via-virtual-accounts"
+  >
+    Generate dedicated bank accounts for your customers to pay into via bank
+    transfer.
+  </Card>
+</CardGroup>
